# zerometry

./: Cargo.toml  README.md
proptest-regressions/: zulti_points.txt
src/: bounding_box.rs  coord.rs  coords.rs  lib.rs  relation.rs  segment.rs  test.rs  zine.rs  zoint.rs  zollection.rs  zolygon.rs  zulti_lines.rs  zulti_points.rs  zulti_polygon.rs  zulti_polygons.rs
src/snapshots/: zerometry__zollection__tests__empty_collection.snap  zerometry__zollection__tests__write_from_geometry_with_simple_collection.snap  zerometry__zulti_lines__tests__write_from_geometry_with_even_number_of_elements.snap  zerometry__zulti_lines__tests__write_from_geometry_with_no_elements.snap  zerometry__zulti_lines__tests__write_from_geometry_with_odd_number_of_elements.snap  zerometry__zulti_polygon__tests__write_from_geometry.snap  zerometry__zulti_polygon__tests__write_from_geometry_with_no_elements.snap  zerometry__zulti_polygon__tests__write_from_geometry_with_odd_number_of_offsets.snap  zerometry__zulti_polygons__tests__write_from_geometry_with_even_number_of_elements.snap  zerometry__zulti_polygons__tests__write_from_geometry_with_no_elements.snap  zerometry__zulti_polygons__tests__write_from_geometry_with_odd_number_of_elements.snap
tests/: bugs.rs
tests/assets/: breau-et-salagosse.geojson
