[package]
name = "zerometry"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Make some zerocopy operations on serialized geo data"
documentation = "https://docs.rs/zerometry"
repository = "https://github.com/irevoire/zerometry"
authors = ["Tamo <tamo@meilisearch.com>"]
keywords = ["geo", "geography", "zerocopy", "serialize"]

[dependencies]
byteorder = "1.4"
bytemuck = "1.23.1"
geo-types = "0.7.16"
geo = { version = "0.30.0", default-features = false, features = ["earcutr"] }

[dev-dependencies]
geojson = "0.24.2" # only used to display stuff in case of unexpected errors
insta = "1.43.1"
proptest = "1.4"
